Bug 517963 - New-tab opening should not launch the content process synchronously r=cjones